--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <body>
         <header>
             <h1>Books I've Been Reading</h1>
-            <a href="#"id="add-book">+</a>
+            <a href="#" id="add-book">+</a>
         </header>
         <div id="book-overview"></div>
         <div class="book-container" id="bookContainer"></div>
-        <div id="add-book-container" class="transparent">
+        <div id="add-book-container" class="transparent dialog">
             <span class="close" onclick="hideAddBook()">×</span>
             <h3>Add a Book!</h3>
             <form id="book-form" method="post">
@@ -50,6 +50,6 @@
                 </p>
             </form>
         </div>
-        <script src="scripts/script.js"></script>
+        <script src="public/script.js"></script>
     </body>
 </html>
