--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,6 @@
                 </p>
             </form>
         </div>
-        <script src="public/script.js"></script>
+        <script src="/script.js"></script>
     </body>
 </html>
